--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -122,8 +122,7 @@
                                     <p:menuitem ajax="false" action="#{patientController.toAddAFamily()}" value="Add Family" rendered="#{webUserController.hasPrivilege('MemberShipAdd')}" ></p:menuitem>
                                     <p:menuitem ajax="false" action="/memberShip/search_family" value="Search Family" rendered="#{webUserController.hasPrivilege('MemberShipEdit')}" ></p:menuitem>
                                     <p:menuitem ajax="false" action="/memberShip/reports" value="Family Membership Reports" rendered="#{webUserController.hasPrivilege('MembershipReports')}" ></p:menuitem>
-                                    <p:menuitem ajax="false" action="/memberShip/discounts" value="Discount Management" rendered="#{webUserController.hasPrivilege('MembershipDiscountManagement')}" ></p:menuitem>
-                                    <p:menuitem ajax="false" action="/memberShip/administration" value="Membership Administration" rendered="#{webUserController.hasPrivilege('MembershipAdministration')}" ></p:menuitem>
+                                    <p:menuitem ajax="false" action="/memberShip/administration" value="Administration" rendered="#{webUserController.hasPrivilege('MembershipAdministration')}" ></p:menuitem>
                                 </p:submenu>
 
                                 <p:submenu styleClass="rightBordrOnly" label="Inward"  rendered="#{webUserController.hasPrivilege('Inward')}">
