--- a/src/main/webapp/resources/css/pharmacyA4.css
+++ b/src/main/webapp/resources/css/pharmacyA4.css
@@ -72,7 +72,7 @@ root {
         /*padding-left: 0.5%!important;*/
         height:800px!important;
         width:1100px!important; 
-/*        overflow:hidden!important; */
+/*         */
         font-family: monospace!important; 
         font-size: 12px!important; 
         margin:1px!important; 
