UI Improvements in Store Purchase Bill

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -44,8 +44,13 @@
     </h:head>
 
     <h:body>
-        <div id="panelFullSpread" class="fullSpread ui-widget-content " >
+        
+        <h1>Site will be down for maintainance.</h1>
+        
+        <div id="panelFullSpread" class="fullSpread ui-widget-content " style="display: none;" >
 
+            
+            
             <p:growl id="publicGrowl"    />
             <h:panelGroup >
                 <h:form>
