SMS Senging Link Updated

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -45,10 +45,13 @@
 
     <h:body>
         
-        <h1>Site will be down for maintainance.</h1>
+        <h:panelGroup rendered="false" >
+             <h1>Site will be down for maintainance.</h1>
+        </h:panelGroup>
+       
         
         
-        <div id="panelFullSpread" class="fullSpread ui-widget-content " style="display: none;" >
+        <div id="panelFullSpread" class="fullSpread ui-widget-content "  >
 
             
             
