--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -28,8 +28,8 @@
         <h:outputStylesheet library="css" name="printing.css" />
         <h:outputStylesheet library="awesome" name="css/font-awesome.css" ></h:outputStylesheet>
         <h:outputScript library="js" name="jsfcrud.js"/>
-        
-                <!-- Global site tag (gtag.js) - Google Analytics -->
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async="true" src="https://www.googletagmanager.com/gtag/js?id=UA-167559394-1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
@@ -40,153 +40,163 @@
 
             gtag('config', 'UA-167559394-1');
         </script>
-        
+
     </h:head>
 
     <h:body>
-        
+
         <h:panelGroup rendered="false" >
-             <h1>Site will be down for maintainance.</h1>
+            <h1>Server is migrating.</h1>
+            <h2>Please install 
+                <a href="https://anydesk.com/en/downloads/windows" >ANYDESK.</a>  
+            </h2>
+            <h2>
+                Call 071 5812399 with the Anydesk ID.
+            </h2>
+
+
         </h:panelGroup>
-       
-        
-        
-        <div id="panelFullSpread" class="fullSpread ui-widget-content "  >
 
-            
-            
-            <p:growl id="publicGrowl"    />
-            <h:panelGroup >
-                <h:form>
-                    <h:panelGroup >
-                        <p:ajaxStatus style="width:64px;height:64px;position:fixed;right:5px;top:40px;">  
-                            <f:facet name="start">  
-                                <p:graphicImage library="image" name="ajax-loader.gif" />  
-                            </f:facet>  
-
-                            <f:facet name="complete">  
-                                <h:outputText value="" />  
-                            </f:facet>  
-                        </p:ajaxStatus>
-
-                        <h:panelGroup rendered="#{sessionController.logged and !sessionController.firstLogin and sessionController.department ne null}" styleClass="nonPrintBlock" >
-
-                            <f:facet name="header" >
-                                <h:outputLabel value="#{labels.topic}" />
-                            </f:facet>
-
-                            <ez:menu/>
+        <h:panelGroup rendered="true" >
+            <div id="panelFullSpread" class="fullSpread ui-widget-content "  >
 
 
+
+                <p:growl id="publicGrowl"    />
+                <h:panelGroup >
+                    <h:form>
+                        <h:panelGroup >
+                            <p:ajaxStatus style="width:64px;height:64px;position:fixed;right:5px;top:40px;">  
+                                <f:facet name="start">  
+                                    <p:graphicImage library="image" name="ajax-loader.gif" />  
+                                </f:facet>  
+
+                                <f:facet name="complete">  
+                                    <h:outputText value="" />  
+                                </f:facet>  
+                            </p:ajaxStatus>
+
+                            <h:panelGroup rendered="#{sessionController.logged and !sessionController.firstLogin and sessionController.department ne null}" styleClass="nonPrintBlock" >
+
+                                <f:facet name="header" >
+                                    <h:outputLabel value="#{labels.topic}" />
+                                </f:facet>
+
+                                <ez:menu/>
+
+
+
+                            </h:panelGroup>
+
+                            <ez:firstLogin/>
 
                         </h:panelGroup>
-
-                        <ez:firstLogin/>
-
-                    </h:panelGroup>
-                </h:form>
-            </h:panelGroup>
-
-
-            <h:panelGrid id="pgM" columns="1" style="width: 100%; border: 0px;" >
-
-                <h:panelGroup rendered ="#{(sessionController.logged and sessionController.department ne null ) or sessionController.firstLogin}" >
-                    <div style="min-height: 600px;" >
-
-                        <ui:insert name="content"   >
-                            Use Menu to Navigate
-                        </ui:insert>
-
-                    </div>
-                </h:panelGroup>
-
-
-
-
-                <p:panel rendered ="#{sessionController.logged and sessionController.department eq null}" 
-                         styleClass="verticalAndHorizontalCentering">
-                    <h:form id="formDept" >
-
-                        <p:panel header="Select Department" >
-                            <h:panelGrid columns="3" >
-                                <h:outputText value="Department" ></h:outputText>
-                                <p:spacer height="1" width="30" ></p:spacer>
-                                <p:selectOneMenu value="#{sessionController.department}" required="true" var="d" >
-                                    <f:selectItems value="#{sessionController.departments}"
-                                                   var="dept"
-                                                   itemLabel="#{dept.name}"
-                                                   itemValue="#{dept}" >
-                                    </f:selectItems>
-                                    <p:column  >
-                                        <f:facet name="header" >
-                                            <h:outputText value="Department" ></h:outputText>
-                                        </f:facet>
-                                        <h:outputText value="#{d.name}" ></h:outputText>
-                                    </p:column>
-                                    <p:column  >
-                                        <f:facet name="header" >
-                                            <h:outputText value="Institution" ></h:outputText>
-                                        </f:facet>
-                                        <h:outputText value="#{d.institution.name}" ></h:outputText>
-                                    </p:column>
-                                </p:selectOneMenu>
-
-                                <p:spacer height="1" width="30" ></p:spacer>
-                                <p:spacer height="1" width="30" ></p:spacer>
-                                <p:commandButton ajax="false"
-                                                 value="Select"
-                                                 action="#{sessionController.selectDepartment()}" />
-                            </h:panelGrid>
-                        </p:panel>
                     </h:form>
-                </p:panel>
-
-                <h:panelGroup rendered ="#{!sessionController.logged and !sessionController.firstLogin}"  >
-                    <ui:insert name="login"   >
-                        <p:panel header="Please login" id="loginbox" style="text-align: center; " styleClass="nonPrintBlock verticalAndHorizontalCentering">
-                            <h:panelGrid columns="2" >
-                                <h:panelGroup >
-                                    <h:graphicImage  library="image" name="lock.png" />
-                                </h:panelGroup>
-                                <h:panelGroup >
-                                    <h:form id="formLogin">
-                                        <h:panelGrid columns="2">
-                                            <h:outputLabel value="Username"  style="text-align: left; margin: 5px; padding: 5px;"  ></h:outputLabel>
-                                            <p:inputText autocomplete="off" id="txtUserName"
-                                                         value="#{sessionController.userName}"
-                                                         style="text-align: left; margin: 5px; padding: 5px;" ></p:inputText>
-                                            <h:outputLabel value="Password"  style="text-align: left; margin: 5px; padding: 5px;" ></h:outputLabel>
-                                            <p:password id="txtPassword" value="#{sessionController.passord }"  style="text-align: left; margin: 5px; padding: 5px;" ></p:password>
-                                            <h:outputLabel value=""  style="text-align: left; margin: 5px; padding: 5px;" ></h:outputLabel>
-                                            <p:commandButton value="Login" 
-                                                             id="btnLogin"
-                                                             ajax="false"
-                                                             action="#{sessionController.loginActionWithoutDepartment()}" >
-                                            </p:commandButton>
-                                        </h:panelGrid>
-                                    </h:form>
-
-                                </h:panelGroup>
-                            </h:panelGrid>
-                        </p:panel>
-
-                        <h:form>
-                            <p:commandButton rendered="false" value="Desrypt User Names" action="#{sessionController.decryptAllUsers()}" ajax="false" ></p:commandButton>
-                        </h:form>
-
-                    </ui:insert>
                 </h:panelGroup>
 
 
+                <h:panelGrid id="pgM" columns="1" style="width: 100%; border: 0px;" >
 
-            </h:panelGrid>
-            
-            <div style="height: 50px" class="nonPrintBlock" >
+                    <h:panelGroup rendered ="#{(sessionController.logged and sessionController.department ne null ) or sessionController.firstLogin}" >
+                        <div style="min-height: 600px;" >
+
+                            <ui:insert name="content"   >
+                                Use Menu to Navigate
+                            </ui:insert>
+
+                        </div>
+                    </h:panelGroup>
+
+
+
+
+                    <p:panel rendered ="#{sessionController.logged and sessionController.department eq null}" 
+                             styleClass="verticalAndHorizontalCentering">
+                        <h:form id="formDept" >
+
+                            <p:panel header="Select Department" >
+                                <h:panelGrid columns="3" >
+                                    <h:outputText value="Department" ></h:outputText>
+                                    <p:spacer height="1" width="30" ></p:spacer>
+                                    <p:selectOneMenu value="#{sessionController.department}" required="true" var="d" >
+                                        <f:selectItems value="#{sessionController.departments}"
+                                                       var="dept"
+                                                       itemLabel="#{dept.name}"
+                                                       itemValue="#{dept}" >
+                                        </f:selectItems>
+                                        <p:column  >
+                                            <f:facet name="header" >
+                                                <h:outputText value="Department" ></h:outputText>
+                                            </f:facet>
+                                            <h:outputText value="#{d.name}" ></h:outputText>
+                                        </p:column>
+                                        <p:column  >
+                                            <f:facet name="header" >
+                                                <h:outputText value="Institution" ></h:outputText>
+                                            </f:facet>
+                                            <h:outputText value="#{d.institution.name}" ></h:outputText>
+                                        </p:column>
+                                    </p:selectOneMenu>
+
+                                    <p:spacer height="1" width="30" ></p:spacer>
+                                    <p:spacer height="1" width="30" ></p:spacer>
+                                    <p:commandButton ajax="false"
+                                                     value="Select"
+                                                     action="#{sessionController.selectDepartment()}" />
+                                </h:panelGrid>
+                            </p:panel>
+                        </h:form>
+                    </p:panel>
+
+                    <h:panelGroup rendered ="#{!sessionController.logged and !sessionController.firstLogin}"  >
+                        <ui:insert name="login"   >
+                            <p:panel header="Please login" id="loginbox" style="text-align: center; " styleClass="nonPrintBlock verticalAndHorizontalCentering">
+                                <h:panelGrid columns="2" >
+                                    <h:panelGroup >
+                                        <h:graphicImage  library="image" name="lock.png" />
+                                    </h:panelGroup>
+                                    <h:panelGroup >
+                                        <h:form id="formLogin">
+                                            <h:panelGrid columns="2">
+                                                <h:outputLabel value="Username"  style="text-align: left; margin: 5px; padding: 5px;"  ></h:outputLabel>
+                                                <p:inputText autocomplete="off" id="txtUserName"
+                                                             value="#{sessionController.userName}"
+                                                             style="text-align: left; margin: 5px; padding: 5px;" ></p:inputText>
+                                                <h:outputLabel value="Password"  style="text-align: left; margin: 5px; padding: 5px;" ></h:outputLabel>
+                                                <p:password id="txtPassword" value="#{sessionController.passord }"  style="text-align: left; margin: 5px; padding: 5px;" ></p:password>
+                                                <h:outputLabel value=""  style="text-align: left; margin: 5px; padding: 5px;" ></h:outputLabel>
+                                                <p:commandButton value="Login" 
+                                                                 id="btnLogin"
+                                                                 ajax="false"
+                                                                 action="#{sessionController.loginActionWithoutDepartment()}" >
+                                                </p:commandButton>
+                                            </h:panelGrid>
+                                        </h:form>
+
+                                    </h:panelGroup>
+                                </h:panelGrid>
+                            </p:panel>
+
+                            <h:form>
+                                <p:commandButton rendered="false" value="Desrypt User Names" action="#{sessionController.decryptAllUsers()}" ajax="false" ></p:commandButton>
+                            </h:form>
+
+                        </ui:insert>
+                    </h:panelGroup>
+
+
+
+                </h:panelGrid>
+
+                <div style="height: 50px" class="nonPrintBlock" >
+                </div>
+
+                <ez:footer/>
+
             </div>
-            
-            <ez:footer/>
+        </h:panelGroup>
 
-        </div>
+
 
     </h:body>
 </html>
