--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -48,33 +48,45 @@
     <h:body style="font-family: 'Roboto', sans-serif;">
         <div  id="panelFullSpread" class="fullSpread ui-widget-content " >
             <p:growl id="publicGrowl"/>
-            <h:panelGroup rendered ="#{not sessionController.logged}"  >
-                <h:panelGroup rendered="#{applicationController.hasAwebsiteAsFrontEnd}" >
-                    <ez:web_header/>
-                    <ez:web_title/>
-                    <ui:insert name="web">
-                        <ez:webindex rendered="#{not sessionController.websiteUserGoingToLog}"/> 
+
+            <h:panelGroup rendered="#{sessionController.firstLogin}" >
+                <ez:firstLogin ></ez:firstLogin>
+                <ui:insert name="content">
+                </ui:insert>
+            </h:panelGroup>
+
+
+            <h:panelGroup rendered="#{!sessionController.firstLogin}" >
+                <h:panelGroup rendered ="#{not sessionController.logged}"  >
+                    <h:panelGroup rendered="#{applicationController.hasAwebsiteAsFrontEnd}" >
+                        <ez:web_header/>
+                        <ez:web_title/>
+                        <ui:insert name="web">
+                            <ez:webindex rendered="#{not sessionController.websiteUserGoingToLog}"/> 
+                            <ez:login rendered="#{sessionController.websiteUserGoingToLog}"/>
+                        </ui:insert>
                         <ez:login rendered="#{sessionController.websiteUserGoingToLog}"/>
-                    </ui:insert>
-                    <ez:login rendered="#{sessionController.websiteUserGoingToLog}"/>
+                    </h:panelGroup>
+                    <h:panelGroup rendered="#{not applicationController.hasAwebsiteAsFrontEnd}" >
+                        <ui:insert name="login">
+                            <ez:login/>
+                        </ui:insert>
+                    </h:panelGroup>
                 </h:panelGroup>
-                <h:panelGroup rendered="#{not applicationController.hasAwebsiteAsFrontEnd}" >
-                    <ui:insert name="login">
-                        <ez:login/>
-                    </ui:insert>
+                <h:panelGroup rendered ="#{sessionController.logged}"  >
+                    <h:panelGroup rendered="#{sessionController.department ne null}" styleClass="nonPrintBlock" >
+                        <ez:menu/>
+                        <ui:insert name="content">
+                        </ui:insert>
+                    </h:panelGroup>
+                    <h:panelGroup rendered="#{sessionController.department eq null}" styleClass="nonPrintBlock" >
+                        <ez:select_department/>
+                    </h:panelGroup>
+                    <ez:footer/>
                 </h:panelGroup>
             </h:panelGroup>
-            <h:panelGroup rendered ="#{sessionController.logged}"  >
-                <h:panelGroup rendered="#{sessionController.department ne null}" styleClass="nonPrintBlock" >
-                    <ez:menu/>
-                    <ui:insert name="content">
-                    </ui:insert>
-                </h:panelGroup>
-                <h:panelGroup rendered="#{sessionController.department eq null}" styleClass="nonPrintBlock" >
-                    <ez:select_department/>
-                </h:panelGroup>
-                <ez:footer/>
-            </h:panelGroup>
+
+
         </div>
 
     </h:body>
