--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -29,6 +29,9 @@
         <h:outputStylesheet library="awesome" name="css/font-awesome.css" ></h:outputStylesheet>
         <h:outputScript library="js" name="jsfcrud.js"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
+        
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"></link>
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -49,11 +52,7 @@
         <div  id="panelFullSpread" class="fullSpread ui-widget-content " >
             <p:growl id="publicGrowl"/>
 
-            <h:panelGroup rendered="#{sessionController.firstLogin}" >
-                <ez:firstLogin ></ez:firstLogin>
-                <ui:insert name="content">
-                </ui:insert>
-            </h:panelGroup>
+           
 
 
             <h:panelGroup rendered="#{!sessionController.firstLogin}" >
