--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -52,9 +52,6 @@
         <div  id="panelFullSpread" class="fullSpread ui-widget-content " >
             <p:growl id="publicGrowl"/>
 
-           
-
-
             <h:panelGroup rendered="#{!sessionController.firstLogin}" >
                 <h:panelGroup rendered ="#{not sessionController.logged}"  >
                     <h:panelGroup rendered="#{applicationController.hasAwebsiteAsFrontEnd}" >
@@ -85,6 +82,9 @@
                 </h:panelGroup>
             </h:panelGroup>
 
+            <h:panelGroup rendered="#{sessionController.firstLogin}" >
+                <ez:first_login/>
+            </h:panelGroup>
 
         </div>
 
