--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -2,58 +2,58 @@
 /* CSS Document */
 
 *{
-	margin:0px;
-	padding:0px;
+    margin:0px;
+    padding:0px;
 }
 
 a{
-	color:#006fc1 ;	
+    color:#006fc1 ;
 }
 
 a:hover{
-	color:#737373;	
+    color:#737373;
 }
 
 p{
-	text-align:justify;	
+    text-align:justify;
 }
 
 body{
-	font-size:14px;
-	line-height:22px;
-	color:#606978;
-	background:#f8f8f8;
-	font-weight:normal;
-	font-family: 'Roboto-Regular', Arial, Helvetica, sans-serif;
+    font-size:14px;
+    line-height:22px;
+    color:#606978;
+    background:#f8f8f8;
+    font-weight:normal;
+    font-family: 'Roboto-Regular', Arial, Helvetica, sans-serif;
 }
 
 @font-face {
-  font-family: 'Roboto-Regular';
-  src: url('../fonts/Roboto-Regular.eot');
-  src: url('../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/Roboto-Regular.woff2') format('woff2'),
-       url('../fonts/Roboto-Regular.woff') format('woff'),
-       url('../fonts/Roboto-Regular.ttf') format('truetype'),
-       url('../fonts/Roboto-Regular.svg#Roboto-Regular') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'Roboto-Regular';
+    src: url('../fonts/Roboto-Regular.eot');
+    src: url('../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Roboto-Regular.woff2') format('woff2'),
+        url('../fonts/Roboto-Regular.woff') format('woff'),
+        url('../fonts/Roboto-Regular.ttf') format('truetype'),
+        url('../fonts/Roboto-Regular.svg#Roboto-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 
 h1{
-	font-size:25px;
-	line-height:30px;
-	margin-top:10px;
+    font-size:25px;
+    line-height:30px;
+    margin-top:10px;
 }
 
 .modal-dialog {
-	 top: 20%;
+    top: 20%;
 }
 
 .modal-dialog  label{
-	font-size:16px;
-	font-weight:normal;
-	line-height:44px;
+    font-size:16px;
+    font-weight:normal;
+    line-height:44px;
 }
 
 .modal-dialog .input-lg {
@@ -63,9 +63,9 @@ h1{
 
 
 .inner_wrap .section_bottom{
-	margin-top:40px;
-	padding-top:20px;
-	border-top:1px solid #ccc;
+    margin-top:40px;
+    padding-top:20px;
+    border-top:1px solid #ccc;
 }
 
 .inner_wrap {
@@ -79,10 +79,28 @@ h1{
 
 
 .form-horizontal .control-label{
-	text-align:left;
-}	
+    text-align:left;
+}
 
-
+/* Define styles for each column */
+.col-name {
+    width: 12em;
+}
+.col-age {
+    width: 5em;
+}
+.col-sex {
+    width: 5em;
+}
+.col-address {
+    width: 20em;
+}
+.col-phone {
+    width: 10em;
+}
+.col-actions {
+    width: 6em;
+}
 
 
 
