Closes #504 Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -40,7 +40,7 @@
         <h:outputStylesheet library="css" name="ohmis.css" ></h:outputStylesheet>
     </h:head>
 
-    <h:body style="font-family: 'Roboto', sans-serif; ">
+    <h:body style="font-family: 'Roboto', sans-serif !important; font-size: 60%;">
         <div  id="panelFullSpread" class="fullSpread ui-widget-content " >
             <p:growl id="publicGrowl"/>
             <h:panelGroup rendered="#{!sessionController.firstLogin}" >
