Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -37,10 +37,9 @@
 
             gtag('config', 'UA-167559394-1');
         </script>
-        <h:outputStylesheet library="css" name="ohmis.css" ></h:outputStylesheet>
     </h:head>
 
-    <h:body style="font-family: 'Roboto', sans-serif !important; font-size: 60%;">
+    <h:body style="height: 100vh;">
         <div  id="panelFullSpread" class="fullSpread ui-widget-content " >
             <p:growl id="publicGrowl"/>
             <h:panelGroup rendered="#{!sessionController.firstLogin}" >
