--- a/src/main/webapp/resources/css/ohmis.css
+++ b/src/main/webapp/resources/css/ohmis.css
@@ -1,5 +1,24 @@
+.test{
+    background-color: palegreen;
+    font-size: xx-large ;
+}
 
-.auto-width-datatable {
+.auto-width-datatable{
     table-layout: auto !important;
     width: 100% !important;
+}
+
+.dxicon {
+  background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm1-12h-2V6h-2v2H8v2h2v2h2v-2h2v-2h-2z"/></svg>') no-repeat center;
+  background-size: contain;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+}
+
+.testRed{
+    color: red!important;
+    background-color: yellow!important;
+    height: 50px;
+    width: 100px;
 }
