--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -7,52 +7,70 @@
     <h:head class="">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-        <ui:insert name="title">
+        <ui:insert name="title"   >
             <title>
-                <h:panelGroup rendered="#{sessionController.logged}">
-                    <h:outputText value="#{sessionController.loggedUser.institution.name}"></h:outputText>
-                    <h:outputText value=" - "></h:outputText>
-                    <h:outputText value="#{sessionController.loggedUser.department.name} "></h:outputText>
-                    <h:outputText value="- "></h:outputText>
-                    <h:outputText value="#{sessionController.loggedUser.webUserPerson.name}"></h:outputText>
+                <h:panelGroup rendered="#{sessionController.logged}" >
+                    <h:outputText value="#{sessionController.loggedUser.institution.name}" ></h:outputText>
+                    <h:outputText value=" - " ></h:outputText>
+                    <h:outputText value="#{sessionController.loggedUser.department.name} " ></h:outputText>
+                    <h:outputText value="- " ></h:outputText>
+                    <h:outputText value="#{sessionController.loggedUser.webUserPerson.name}" ></h:outputText>
                 </h:panelGroup>
-                <h:panelGroup rendered="#{!sessionController.logged}">
-                    <h:outputText value="Hospital Information Management System"></h:outputText>
+                <h:panelGroup rendered="#{!sessionController.logged}" >
+                    <h:outputText value="Hospital Information Management System" ></h:outputText>
                 </h:panelGroup>
             </title>
         </ui:insert>
 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"></link>
         <h:outputStylesheet library="css" name="ohmis.css"/>
         <h:outputScript library="js" name="jsfcrud.js"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"></link>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async="true" src="https://www.googletagmanager.com/gtag/js?id=UA-167559394-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-167559394-1');
+        </script>
     </h:head>
     <h:body style="height: 100vh;">
-
         <p:growl id="publicGrowl" showDetail="true" sticky="false" />
-        <h:panelGroup rendered="#{!sessionController.firstLogin}">
-
-            <h:panelGroup rendered="#{not sessionController.logged}">
-                <h:panelGroup rendered="#{applicationController.hasAwebsiteAsFrontEnd}">
+        <h:panelGroup rendered="#{!sessionController.firstLogin}" >
+            <h:panelGroup rendered ="#{not sessionController.logged}"  >
+                <h:panelGroup rendered="#{applicationController.hasAwebsiteAsFrontEnd}" >
                     <ez:web_header/>
+                    <ez:web_title/>
+                    <ui:insert name="web">
+                        <ez:webindex rendered="#{not sessionController.websiteUserGoingToLog}"/> 
+                        <ez:login rendered="#{sessionController.websiteUserGoingToLog}"/>
+                    </ui:insert>
+                    <ez:login rendered="#{sessionController.websiteUserGoingToLog}"/>
                 </h:panelGroup>
-                <h:panelGroup rendered="#{not applicationController.hasAwebsiteAsFrontEnd}">
+                <h:panelGroup rendered="#{not applicationController.hasAwebsiteAsFrontEnd}" >
                     <ui:insert name="login">
                         <ez:login/>
                     </ui:insert>
                 </h:panelGroup>
             </h:panelGroup>
-            <h:panelGroup rendered="#{sessionController.logged}">
-                <h:panelGroup rendered="#{sessionController.department ne null}">
+            <h:panelGroup rendered ="#{sessionController.logged}"  >
+                <h:panelGroup rendered="#{sessionController.department ne null}" >
                     <ez:menu/>
                     <ui:insert name="content">
                     </ui:insert>
                 </h:panelGroup>
-                <h:panelGroup rendered="#{sessionController.department eq null}">
+                <h:panelGroup rendered="#{sessionController.department eq null}" >
                     <ez:select_department/>
                 </h:panelGroup>
                 <ez:footer/>
             </h:panelGroup>
         </h:panelGroup>
-        <h:panelGroup rendered="#{sessionController.firstLogin}">
+        <h:panelGroup rendered="#{sessionController.firstLogin}" >
             <ez:first_login/>
         </h:panelGroup>
         <p:messages showDetail="true" ></p:messages>
