--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -5,6 +5,15 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:ez="http://xmlns.jcp.org/jsf/composite/ezcomp">
     <h:head class="">
+        <ui:fragment rendered="#{!sessionController.logged}">
+            <ui:fragment rendered="#{applicationController.hasAwebsiteAsFrontEnd}">
+                <ui:fragment rendered="#{!sessionController.directedToLandingPage}">
+
+                    <meta http-equiv="refresh" content="0;url=#{sessionController.landingPage}" />
+
+                </ui:fragment>
+            </ui:fragment>
+        </ui:fragment>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
         <ui:insert name="title"   >
@@ -43,20 +52,9 @@
         <p:growl id="publicGrowl" showDetail="true" sticky="false" />
         <h:panelGroup rendered="#{!sessionController.firstLogin}" >
             <h:panelGroup rendered ="#{not sessionController.logged}"  >
-                <h:panelGroup rendered="#{applicationController.hasAwebsiteAsFrontEnd}" >
-                    <ez:web_header/>
-                    <ez:web_title/>
-                    <ui:insert name="web">
-                        <ez:webindex rendered="#{not sessionController.websiteUserGoingToLog}"/> 
-                        <ez:login rendered="#{sessionController.websiteUserGoingToLog}"/>
-                    </ui:insert>
-                    <ez:login rendered="#{sessionController.websiteUserGoingToLog}"/>
-                </h:panelGroup>
-                <h:panelGroup rendered="#{not applicationController.hasAwebsiteAsFrontEnd}" >
-                    <ui:insert name="login">
-                        <ez:login/>
-                    </ui:insert>
-                </h:panelGroup>
+                <ui:insert name="login">
+                    <ez:login/>
+                </ui:insert>
             </h:panelGroup>
             <h:panelGroup rendered ="#{sessionController.logged}"  >
                 <h:panelGroup rendered="#{sessionController.department ne null}" >
