Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -40,7 +40,7 @@
     <h:body style="height: 100vh;" class="bg-light">
         <div class="container-fluid" >
             <div class="row" >
-                <div class="col-12 p-1" >
+                <div class="col-12" >
                     <h:panelGroup rendered="#{!sessionController.firstLogin}" >
                         <h:panelGroup rendered ="#{not sessionController.logged}"  >
                             <ui:insert name="login">
