Closes #1288 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -35,7 +35,7 @@
         <h:outputScript library="js" name="jsfcrud.js"/>
 
     </h:head>
-    <h:body style="height: 90vh;" class="bg-secondary">
+    <h:body style="height: 90vh;" class="">
 
         <div class="row" >
             <div class="col-12" >
